tests/fixtures/invalid/unknown_base.seed
theme custom {
  extends: "nonexistent_theme"  // Trying to extend from a theme that doesn't exist
  button: {
    primary: {
      bg: "purple.500"
      text: "white"
    }
  }
}
